--- a/.gitignore
+++ b/.gitignore
@@ -1,14 +1,22 @@
+// filepath: .gitignore
 # Dependencies
 node_modules/
+/.pnp
+.pnp.js
+
+# Testing
+/coverage
+
+# Production
+/build
+/dist
 
 # Environment variables
 .env
 .env.local
-.env.*.local
-
-# Build outputs
-dist/
-build/
+.env.development.local
+.env.test.local
+.env.production.local
 
 # Logs
 logs
@@ -17,15 +25,10 @@ npm-debug.log*
 yarn-debug.log*
 yarn-error.log*
 
-# Editor directories and files
+# IDEs and editors
 .idea/
 .vscode/
-*.suo
-*.ntvs*
-*.njsproj
-*.sln
-*.sw?
-
-# Operating System
+*.swp
+*.swo
 .DS_Store
 Thumbs.db
