--- a/note-taking-app/frontend/package.json
+++ b/note-taking-app/frontend/package.json
@@ -3,47 +3,63 @@
     "version": "0.1.0",
     "private": true,
     "dependencies": {
-      "@tailwindcss/typography": "^0.5.10",
-      "@testing-library/jest-dom": "^5.17.0",
-      "@testing-library/react": "^13.4.0",
-      "@testing-library/user-event": "^13.5.0",
-      "axios": "^1.6.2",
-      "date-fns": "^2.30.0",
-      "lucide-react": "^0.263.1",
-      "react": "^18.2.0",
-      "react-dom": "^18.2.0",
-      "react-markdown": "^8.0.7",
-      "react-router-dom": "^6.20.0",
-      "react-scripts": "5.0.1",
-      "recharts": "^2.10.1"
+        "@reduxjs/toolkit": "^2.0.1",
+        "@tailwindcss/typography": "^0.5.10",
+        "axios": "^1.6.2",
+        "date-fns": "^2.30.0",
+        "lucide-react": "^0.263.1",
+        "react": "^18.2.0",
+        "react-dom": "^18.2.0",
+        "react-markdown": "^8.0.7",
+        "react-redux": "^9.0.4",
+        "react-router-dom": "^6.20.0",
+        "react-scripts": "5.0.1",
+        "recharts": "^2.10.1"
     },
     "scripts": {
-      "start": "react-scripts start",
-      "build": "react-scripts build",
-      "test": "react-scripts test",
-      "eject": "react-scripts eject"
+        "start": "react-scripts start",
+        "build": "react-scripts build",
+        "test": "jest",
+        "test:watch": "jest --watch",
+        "eject": "react-scripts eject"
     },
-    "eslintConfig": {
-      "extends": [
-        "react-app",
-        "react-app/jest"
-      ]
-    },
-    "browserslist": {
-      "production": [
-        ">0.2%",
-        "not dead",
-        "not op_mini all"
-      ],
-      "development": [
-        "last 1 chrome version",
-        "last 1 firefox version",
-        "last 1 safari version"
-      ]
+    "jest": {
+        "testEnvironment": "jsdom",
+        "setupFilesAfterEnv": [
+            "<rootDir>/src/tests/setup/setupTests.js"
+        ],
+        "moduleNameMapper": {
+            "\\.(css|less|scss|sass)$": "identity-obj-proxy",
+            "\\.(gif|ttf|eot|svg|png)$": "<rootDir>/src/tests/setup/fileMock.js"
+        },
+        "transform": {
+            "^.+\\.(js|jsx)$": "babel-jest"
+        },
+        "transformIgnorePatterns": [
+            "node_modules/(?!(axios|@babel/runtime)/)"
+        ],
+        "moduleDirectories": [
+            "node_modules",
+            "src"
+        ],
+        "testPathIgnorePatterns": [
+            "/node_modules/"
+        ],
+        "verbose": true
     },
     "devDependencies": {
-      "autoprefixer": "^10.4.16",
-      "postcss": "^8.4.31",
-      "tailwindcss": "^3.3.5"
+        "@babel/core": "^7.23.5",
+        "@babel/preset-env": "^7.23.5",
+        "@babel/preset-react": "^7.23.3",
+        "@babel/plugin-transform-modules-commonjs": "^7.23.3",
+        "@babel/plugin-transform-runtime": "^7.23.4",
+        "@babel/runtime": "^7.23.5",
+        "@testing-library/jest-dom": "^6.1.5",
+        "@testing-library/react": "^14.1.2",
+        "@testing-library/user-event": "^14.5.1",
+        "babel-jest": "^29.7.0",
+        "identity-obj-proxy": "^3.0.0",
+        "jest": "^29.7.0",
+        "jest-environment-jsdom": "^29.7.0"
     }
-  }
+}
