--- a/package.json
+++ b/package.json
@@ -8,5 +8,12 @@
     "react-beautiful-dnd": "^13.1.1",
     "react-redux": "^9.2.0",
     "winston": "^3.17.0"
+  },
+  "devDependencies": {
+    "@testing-library/jest-dom": "^6.6.3",
+    "@testing-library/react": "^14.3.1",
+    "@testing-library/user-event": "^14.5.2",
+    "jest": "^29.7.0",
+    "msw": "^1.3.5"
   }
 }
