--- a/notes/package.json
+++ b/notes/package.json
@@ -17,9 +17,11 @@
     "@hookform/resolvers": "^3.9.1",
     "@prisma/client": "^6.1.0",
     "@uiw/react-md-editor": "^4.0.5",
+    "bcrypt": "^5.1.1",
     "clsx": "^2.1.1",
     "date-fns": "^4.1.0",
     "lodash": "^4.17.21",
+    "lucide-react": "^0.469.0",
     "next": "15.1.3",
     "next-auth": "^4.24.11",
     "react": "^19.0.0",
@@ -31,6 +33,7 @@
   },
   "devDependencies": {
     "@eslint/eslintrc": "^3",
+    "@types/bcrypt": "^5.0.2",
     "@types/node": "^20.17.11",
     "@types/react": "^19",
     "@types/react-dom": "^19",
