--- a/notes/package.json
+++ b/notes/package.json
@@ -15,6 +15,7 @@
     "@headlessui/react": "^2.2.0",
     "@heroicons/react": "^2.2.0",
     "@hookform/resolvers": "^3.9.1",
+    "@next/font": "^14.2.15",
     "@prisma/client": "^6.1.0",
     "@uiw/react-md-editor": "^4.0.5",
     "bcrypt": "^5.1.1",
